@@ -197,6 +197,15 @@ public class OIFReader extends FormatReader {
     return openThumbImage(id, 0).getHeight();
   }
 
+  /* @see IFormatReader#getUsedFiles(String) */
+  public String[] getUsedFiles(String id) throws FormatException, IOException {
+    if (!id.equals(currentId)) initFile(id);
+    String[] s = new String[tiffs.size() + 1];
+    s[0] = getMappedId(currentId);
+    for (int i=1; i<s.length; i++) s[i] = getMappedId((String) tiffs.get(i-1));
+    return s;
+  }
+
   /** Closes any open files. */
   public void close() throws FormatException, IOException {
     if (reader != null) reader.close();
